Fix menu alignment

--- a/assets/common.css
+++ b/assets/common.css
@@ -49,13 +49,8 @@ img.mascot {
     width: 100%;
 }
 
-.menu > li {
-    user-select: none;
-    width: 100%;
-}
-
-.menu.small {
-    font-size: small;
+.menu.normal {
+    font-size: large;
 }
 
 .menu.large {
@@ -64,6 +59,11 @@ img.mascot {
 
 .menu.width-auto {
     width: auto;
+}
+
+.menu > li {
+    user-select: none;
+    margin: 0px 10px;
 }
 
 .menu > li > a {
@@ -190,6 +190,10 @@ img.avatar {
 }
 
 @media (max-width: 650px) {
+    .menu.normal {
+        font-size: small;
+    }
+
     .menu.large {
         flex-direction: column;
         justify-content: space-evenly;
